feat: images and data for lessons all ported over
Project builds properly, but the collaborative report (r_practice_clean_wrangle_visualize) needs work to align the header levels.  Also, turn off exercise numbering (at top level, or will it work for that script alone?

--- a/inst/lessons/github_publishing.qmd
+++ b/inst/lessons/github_publishing.qmd
@@ -59,7 +59,7 @@ Now, the rendered website version of your repo will show up at a special URL.
     
 GitHub Pages follows a convention like this:
     
-![](images/github_pages.png){fig-alt="GitHub Pages URL pattern"}
+![](images/github_publishing/github_pages.png){fig-alt="GitHub Pages URL pattern"}
      
 Note that it changes from **github.com** to **github.io**
      
@@ -132,5 +132,5 @@ Quarto web pages are a great way to share work in progress with your colleagues.
 
 
 
-![](images/github-pages-index-coreR.png)
+![](images/github_publishing/github-pages-index-coreR.png)
 
