--- a/inst/lessons/r_provenance_reproducibility.qmd
+++ b/inst/lessons/r_provenance_reproducibility.qmd
@@ -1,3 +1,7 @@
+---
+title: Provenance and Reproducibility
+---
+
 :::{.callout-tip}
 ## Learning Objectives 
 
@@ -9,7 +13,7 @@
 
 :::
 
-![By Allison Horst](images/reproducibility_alibi_horst.png)
+![By Allison Horst](images/r_provenance_reproducibility/reproducibility_alibi_horst.png)
 
 <br>
 
@@ -46,7 +50,7 @@ Working in a reproducible manner:
 
 To enable others to fully interpret, reproduce or build upon our research, we need to provide more comprehensive information than is typically included in a figure or publication. The **methods sections of papers are typically inadequate to fully reproduce the work described in the paper**.
 
-![](images/Smith-et-al.png)
+![](images/r_provenance_reproducibility/Smith-et-al.png)
 
 For example, the figure above conveys multiple messages. But, by looking at the figure we don't get the full story of the process the scientist used to make this plot. What data were used in this study? What methods were applied? What were the parameter settings? What documentation or code are available to us to evaluate the results? Can we trust these data and methods? Are the results reproducible?
 
@@ -61,7 +65,7 @@ Practically speaking, reproducibility includes:
 
 A recent study of publicly-available datasets in the Harvard Database repository containing R files found that only 26% of R files ran without error in the initial execution. 44% were able to be run after code cleaning, showing the importance of good programming practice [@trisovic2022]. The figure below from Trisovic et al. shows a _sankey diagram_ of how code cleaning was able to fix common errors.
 
-![](images/code-reproducibility-trisovic.png)
+![](images/r_provenance_reproducibility/code-reproducibility-trisovic.png)
 
 ## Computational Provenance and Workflows
 
@@ -77,17 +81,17 @@ When we put these all together with formal documentation, we create a **computat
 
 Here's an example of a computational workflow from Mark Carls: [Mark Carls. Analysis of hydrocarbons following the Exxon Valdez oil spill, Gulf of Alaska, 1989 - 2014. Gulf of Alaska Data Portal. urn:uuid:3249ada0-afe3-4dd6-875e-0f7928a4c171.](https://search.dataone.org/view/urn%3Auuid%3A3249ada0-afe3-4dd6-875e-0f7928a4c171), that represents a three step workflow comprising four source data files and two output visualizations. 
 
-![](images/comp-workflow-1.png)
+![](images/r_provenance_reproducibility/comp-workflow-1.png)
 
 
-![](images/provenance.png)
+![](images/r_provenance_reproducibility/provenance.png)
 
 This image is a screenshot of an interactive user interface of a workflow built by DataONE. You can clearly see which data files were inputs to the process, the scripts that are used to process and visualize the data, and the final output objects that are produced, in this case two graphical maps of Prince William Sound in Alaska.
 
 
 ## From Provenance to Reproducibility
 
-![](images/Prov-History.png)
+![](images/r_provenance_reproducibility/Prov-History.png)
 
 
 DataONE provides a tool to track and visualize provenance. It facilitates reproducible science through provenance by: 
@@ -101,13 +105,13 @@ DataONE provides a tool to track and visualize provenance. It facilitates reprod
 <!---
 **Introducing [ProvONE](http://purl.dataone.org/provone-v1-dev)**, an extension of W3C PROV
 
-![](images/Prov_ONE.png)
+![](images/r_provenance_reproducibility/Prov_ONE.png)
 
 ProvONE provides the fundamental information required to understand and analyze scientific workflow-based computational experiments. It covers the main aspects that have been identified as relevant in the provenance literature including **data structure**. This addresses the most relevant aspects of how the data, both used and produced by a computational process, is organized and represented. For scientific workflows this implies the inputs and outputs of the various tasks that form part of the workflow.
 -->
 One way to illustrate this is to look into the structure of a data package. A **data package** is the unit of publication of your data, including datasets, metadata, software and provenance. The image below represents a data package and all its components and how these components relate to one another.
 
-![](images/data-package.png)
+![](images/r_provenance_reproducibility/data-package.png)
 
 <!--### Data Citation  {-}
 
@@ -131,7 +135,7 @@ We want to move towards a model such that when a user cites a research publicati
 - What was **derived** from it
 - **Who to credit** down the attribution stack
 
-![](images/Transitive-Credit.png)
+![](images/r_provenance_reproducibility/Transitive-Credit.png)
 
 This is transitive credit. And it changes the way in which we think about science communication and traditional publications. 
 
@@ -226,7 +230,7 @@ And that's it! Now your have your research compendium in your local computer and
 
 Let's explore the structure `rrtools` has put in place for us. Inside the analysis folder we have 5 folders. Different parts of our project will go into this different folders. Our data into the `data` folder, when the time comes to save any figure, we should save them into the `figures` folder, and so on.
 
-![Research compendia from Marwick et al.](images/compendia.png)
+![Research compendia from Marwick et al.](images/r_provenance_reproducibility/compendia.png)
 
 You'll notice a `analysis/templates` directory that contains journal citation style language (CSL) files which set the style of citations and reference list for the journal (the Journal of Archaeological Science, in this example). The template.Rmd renders into the template.docx. This document is called in the paper.qmd YAML to style the output of the paper created in paper.qmd.
 
@@ -263,7 +267,7 @@ tinytex::install_tinytex() ## this may take several minutes
 
 2. To create a new file from `rticles`custom templates, got to `File | New File | R Markdown...` menu, which shows the following dialog:
 
-![](images/rticles-new.png)
+![](images/r_provenance_reproducibility/rticles-new.png)
 
 3. Go to "From Template" in the left side menu.
 
@@ -271,7 +275,7 @@ tinytex::install_tinytex() ## this may take several minutes
 
 5. You can now Knit the Rmd file to see a highly-targeted article format, like this one for PNAS:
 
-![](images/rticles-pnas.png)
+![](images/r_provenance_reproducibility/rticles-pnas.png)
 
 ::: 
 
@@ -374,13 +378,13 @@ RUN . /etc/environment \
 - This means that the code that knits your paper is run, and an updated version of your paper is knit. 
 - This is called **continuous integration,** and is extremely convenient for developing products like this, since the build step can be taken care of automatically as you push to your repository.
 
-![](images/github-actions.png)
+![](images/r_provenance_reproducibility/github-actions.png)
 
 
  
 ## The 5th Generation of Reproducible Papers
 
-![](images/Living-paper.png)
+![](images/r_provenance_reproducibility/Living-paper.png)
 
 **Whole Tale** is a project that aims to simplify computational reproducibility. It enables researchers to easily package and share 'Tales'. Tales are executable research objects captured in a standards-based tale format complete with metadata. They can contain:
 
@@ -389,7 +393,7 @@ RUN . /etc/environment \
 - Narrative (traditional science story)
 - Compute environment (e.g. RStudio, Jupyter) 
 
-![](images/whole-tale-container.png)
+![](images/r_provenance_reproducibility/whole-tale-container.png)
 
 By combining data, code and the compute environment, Tales allow researchers to:
 
